tnc/src/qasm/.antlr/Qasm2Parser.java
// Generated from /work_fast/ga87com/QuantumResearch/TensorStuff/GITHUB/tensornetworkcontractions/src/qasm/Qasm2Parser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class Qasm2Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		OPENQASM=1, INCLUDE=2, QREG=3, CREG=4, GATE=5, OPAQUE=6, RESET=7, MEASURE=8, 
		BARRIER=9, IF=10, PI=11, U=12, CX=13, LBRACKET=14, RBRACKET=15, LBRACE=16, 
		RBRACE=17, LPAREN=18, RPAREN=19, SEMICOLON=20, COMMA=21, DOT=22, ARROW=23, 
		EQUALS=24, PLUS=25, MINUS=26, ASTERISK=27, SLASH=28, CARET=29, SIN=30, 
		COS=31, TAN=32, EXP=33, LN=34, SQRT=35, Integer=36, Float=37, StringLiteral=38, 
		Whitespace=39, Newline=40, LineComment=41, BlockComment=42, Identifier=43, 
		VERSION_IDENTIFER_WHITESPACE=44, VersionSpecifier=45;
	public static final int
		RULE_program = 0, RULE_version = 1, RULE_statement = 2, RULE_includeStatement = 3, 
		RULE_declaration = 4, RULE_gateDeclaration = 5, RULE_quantumOperation = 6, 
		RULE_ifStatement = 7, RULE_barrier = 8, RULE_bodyStatement = 9, RULE_gateCall = 10, 
		RULE_idlist = 11, RULE_mixedlist = 12, RULE_argument = 13, RULE_designator = 14, 
		RULE_explist = 15, RULE_exp = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "version", "statement", "includeStatement", "declaration", 
			"gateDeclaration", "quantumOperation", "ifStatement", "barrier", "bodyStatement", 
			"gateCall", "idlist", "mixedlist", "argument", "designator", "explist", 
			"exp"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'OPENQASM'", "'include'", "'qreg'", "'creg'", "'gate'", "'opaque'", 
			"'reset'", "'measure'", "'barrier'", "'if'", "'pi'", "'U'", "'CX'", "'['", 
			"']'", "'{'", "'}'", "'('", "')'", "';'", "','", "'.'", "'->'", "'=='", 
			"'+'", "'-'", "'*'", "'/'", "'^'", "'sin'", "'cos'", "'tan'", "'exp'", 
			"'ln'", "'sqrt'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "OPENQASM", "INCLUDE", "QREG", "CREG", "GATE", "OPAQUE", "RESET", 
			"MEASURE", "BARRIER", "IF", "PI", "U", "CX", "LBRACKET", "RBRACKET", 
			"LBRACE", "RBRACE", "LPAREN", "RPAREN", "SEMICOLON", "COMMA", "DOT", 
			"ARROW", "EQUALS", "PLUS", "MINUS", "ASTERISK", "SLASH", "CARET", "SIN", 
			"COS", "TAN", "EXP", "LN", "SQRT", "Integer", "Float", "StringLiteral", 
			"Whitespace", "Newline", "LineComment", "BlockComment", "Identifier", 
			"VERSION_IDENTIFER_WHITESPACE", "VersionSpecifier"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Qasm2Parser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Qasm2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public VersionContext version() {
			return getRuleContext(VersionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(Qasm2Parser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			version();
			setState(38);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8796093036540L) != 0)) {
				{
				{
				setState(35);
				statement();
				}
				}
				setState(40);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(41);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VersionContext extends ParserRuleContext {
		public TerminalNode OPENQASM() { return getToken(Qasm2Parser.OPENQASM, 0); }
		public TerminalNode VersionSpecifier() { return getToken(Qasm2Parser.VersionSpecifier, 0); }
		public TerminalNode SEMICOLON() { return getToken(Qasm2Parser.SEMICOLON, 0); }
		public VersionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_version; }
	}

	public final VersionContext version() throws RecognitionException {
		VersionContext _localctx = new VersionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_version);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			match(OPENQASM);
			setState(44);
			match(VersionSpecifier);
			setState(45);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public IncludeStatementContext includeStatement() {
			return getRuleContext(IncludeStatementContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public GateDeclarationContext gateDeclaration() {
			return getRuleContext(GateDeclarationContext.class,0);
		}
		public QuantumOperationContext quantumOperation() {
			return getRuleContext(QuantumOperationContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public BarrierContext barrier() {
			return getRuleContext(BarrierContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(53);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INCLUDE:
				enterOuterAlt(_localctx, 1);
				{
				setState(47);
				includeStatement();
				}
				break;
			case QREG:
			case CREG:
				enterOuterAlt(_localctx, 2);
				{
				setState(48);
				declaration();
				}
				break;
			case GATE:
			case OPAQUE:
				enterOuterAlt(_localctx, 3);
				{
				setState(49);
				gateDeclaration();
				}
				break;
			case RESET:
			case MEASURE:
			case U:
			case CX:
			case Identifier:
				enterOuterAlt(_localctx, 4);
				{
				setState(50);
				quantumOperation();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 5);
				{
				setState(51);
				ifStatement();
				}
				break;
			case BARRIER:
				enterOuterAlt(_localctx, 6);
				{
				setState(52);
				barrier();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IncludeStatementContext extends ParserRuleContext {
		public TerminalNode INCLUDE() { return getToken(Qasm2Parser.INCLUDE, 0); }
		public TerminalNode StringLiteral() { return getToken(Qasm2Parser.StringLiteral, 0); }
		public TerminalNode SEMICOLON() { return getToken(Qasm2Parser.SEMICOLON, 0); }
		public IncludeStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_includeStatement; }
	}

	public final IncludeStatementContext includeStatement() throws RecognitionException {
		IncludeStatementContext _localctx = new IncludeStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_includeStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(INCLUDE);
			setState(56);
			match(StringLiteral);
			setState(57);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(Qasm2Parser.Identifier, 0); }
		public DesignatorContext designator() {
			return getRuleContext(DesignatorContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(Qasm2Parser.SEMICOLON, 0); }
		public TerminalNode QREG() { return getToken(Qasm2Parser.QREG, 0); }
		public TerminalNode CREG() { return getToken(Qasm2Parser.CREG, 0); }
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_la = _input.LA(1);
			if ( !(_la==QREG || _la==CREG) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(60);
			match(Identifier);
			setState(61);
			designator();
			setState(62);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GateDeclarationContext extends ParserRuleContext {
		public IdlistContext params;
		public IdlistContext qubits;
		public BodyStatementContext body;
		public TerminalNode GATE() { return getToken(Qasm2Parser.GATE, 0); }
		public TerminalNode Identifier() { return getToken(Qasm2Parser.Identifier, 0); }
		public TerminalNode LBRACE() { return getToken(Qasm2Parser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(Qasm2Parser.RBRACE, 0); }
		public List<IdlistContext> idlist() {
			return getRuleContexts(IdlistContext.class);
		}
		public IdlistContext idlist(int i) {
			return getRuleContext(IdlistContext.class,i);
		}
		public TerminalNode LPAREN() { return getToken(Qasm2Parser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(Qasm2Parser.RPAREN, 0); }
		public List<BodyStatementContext> bodyStatement() {
			return getRuleContexts(BodyStatementContext.class);
		}
		public BodyStatementContext bodyStatement(int i) {
			return getRuleContext(BodyStatementContext.class,i);
		}
		public TerminalNode OPAQUE() { return getToken(Qasm2Parser.OPAQUE, 0); }
		public TerminalNode SEMICOLON() { return getToken(Qasm2Parser.SEMICOLON, 0); }
		public GateDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gateDeclaration; }
	}

	public final GateDeclarationContext gateDeclaration() throws RecognitionException {
		GateDeclarationContext _localctx = new GateDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_gateDeclaration);
		int _la;
		try {
			setState(95);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case GATE:
				enterOuterAlt(_localctx, 1);
				{
				setState(64);
				match(GATE);
				setState(65);
				match(Identifier);
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LPAREN) {
					{
					setState(66);
					match(LPAREN);
					setState(68);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==Identifier) {
						{
						setState(67);
						((GateDeclarationContext)_localctx).params = idlist();
						}
					}

					setState(70);
					match(RPAREN);
					}
				}

				setState(73);
				((GateDeclarationContext)_localctx).qubits = idlist();
				setState(74);
				match(LBRACE);
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8796093035008L) != 0)) {
					{
					{
					setState(75);
					((GateDeclarationContext)_localctx).body = bodyStatement();
					}
					}
					setState(80);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(81);
				match(RBRACE);
				}
				break;
			case OPAQUE:
				enterOuterAlt(_localctx, 2);
				{
				setState(83);
				match(OPAQUE);
				setState(84);
				match(Identifier);
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LPAREN) {
					{
					setState(85);
					match(LPAREN);
					setState(87);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==Identifier) {
						{
						setState(86);
						((GateDeclarationContext)_localctx).params = idlist();
						}
					}

					setState(89);
					match(RPAREN);
					}
				}

				setState(92);
				((GateDeclarationContext)_localctx).qubits = idlist();
				setState(93);
				match(SEMICOLON);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuantumOperationContext extends ParserRuleContext {
		public ArgumentContext src;
		public ArgumentContext dest;
		public GateCallContext gateCall() {
			return getRuleContext(GateCallContext.class,0);
		}
		public TerminalNode MEASURE() { return getToken(Qasm2Parser.MEASURE, 0); }
		public TerminalNode ARROW() { return getToken(Qasm2Parser.ARROW, 0); }
		public TerminalNode SEMICOLON() { return getToken(Qasm2Parser.SEMICOLON, 0); }
		public List<ArgumentContext> argument() {
			return getRuleContexts(ArgumentContext.class);
		}
		public ArgumentContext argument(int i) {
			return getRuleContext(ArgumentContext.class,i);
		}
		public TerminalNode RESET() { return getToken(Qasm2Parser.RESET, 0); }
		public QuantumOperationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_quantumOperation; }
	}

	public final QuantumOperationContext quantumOperation() throws RecognitionException {
		QuantumOperationContext _localctx = new QuantumOperationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_quantumOperation);
		try {
			setState(108);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case U:
			case CX:
			case Identifier:
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				gateCall();
				}
				break;
			case MEASURE:
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				match(MEASURE);
				setState(99);
				((QuantumOperationContext)_localctx).src = argument();
				setState(100);
				match(ARROW);
				setState(101);
				((QuantumOperationContext)_localctx).dest = argument();
				setState(102);
				match(SEMICOLON);
				}
				break;
			case RESET:
				enterOuterAlt(_localctx, 3);
				{
				setState(104);
				match(RESET);
				setState(105);
				((QuantumOperationContext)_localctx).dest = argument();
				setState(106);
				match(SEMICOLON);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfStatementContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(Qasm2Parser.IF, 0); }
		public TerminalNode LPAREN() { return getToken(Qasm2Parser.LPAREN, 0); }
		public TerminalNode Identifier() { return getToken(Qasm2Parser.Identifier, 0); }
		public TerminalNode EQUALS() { return getToken(Qasm2Parser.EQUALS, 0); }
		public TerminalNode Integer() { return getToken(Qasm2Parser.Integer, 0); }
		public TerminalNode RPAREN() { return getToken(Qasm2Parser.RPAREN, 0); }
		public QuantumOperationContext quantumOperation() {
			return getRuleContext(QuantumOperationContext.class,0);
		}
		public IfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStatement; }
	}

	public final IfStatementContext ifStatement() throws RecognitionException {
		IfStatementContext _localctx = new IfStatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ifStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(IF);
			setState(111);
			match(LPAREN);
			setState(112);
			match(Identifier);
			setState(113);
			match(EQUALS);
			setState(114);
			match(Integer);
			setState(115);
			match(RPAREN);
			setState(116);
			quantumOperation();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BarrierContext extends ParserRuleContext {
		public TerminalNode BARRIER() { return getToken(Qasm2Parser.BARRIER, 0); }
		public MixedlistContext mixedlist() {
			return getRuleContext(MixedlistContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(Qasm2Parser.SEMICOLON, 0); }
		public BarrierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_barrier; }
	}

	public final BarrierContext barrier() throws RecognitionException {
		BarrierContext _localctx = new BarrierContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_barrier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(BARRIER);
			setState(119);
			mixedlist();
			setState(120);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BodyStatementContext extends ParserRuleContext {
		public GateCallContext gateCall() {
			return getRuleContext(GateCallContext.class,0);
		}
		public TerminalNode BARRIER() { return getToken(Qasm2Parser.BARRIER, 0); }
		public IdlistContext idlist() {
			return getRuleContext(IdlistContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(Qasm2Parser.SEMICOLON, 0); }
		public BodyStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bodyStatement; }
	}

	public final BodyStatementContext bodyStatement() throws RecognitionException {
		BodyStatementContext _localctx = new BodyStatementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_bodyStatement);
		try {
			setState(127);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case U:
			case CX:
			case Identifier:
				enterOuterAlt(_localctx, 1);
				{
				setState(122);
				gateCall();
				}
				break;
			case BARRIER:
				enterOuterAlt(_localctx, 2);
				{
				setState(123);
				match(BARRIER);
				setState(124);
				idlist();
				setState(125);
				match(SEMICOLON);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GateCallContext extends ParserRuleContext {
		public MixedlistContext mixedlist() {
			return getRuleContext(MixedlistContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(Qasm2Parser.SEMICOLON, 0); }
		public TerminalNode U() { return getToken(Qasm2Parser.U, 0); }
		public TerminalNode CX() { return getToken(Qasm2Parser.CX, 0); }
		public TerminalNode Identifier() { return getToken(Qasm2Parser.Identifier, 0); }
		public TerminalNode LPAREN() { return getToken(Qasm2Parser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(Qasm2Parser.RPAREN, 0); }
		public ExplistContext explist() {
			return getRuleContext(ExplistContext.class,0);
		}
		public GateCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gateCall; }
	}

	public final GateCallContext gateCall() throws RecognitionException {
		GateCallContext _localctx = new GateCallContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_gateCall);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 8796093034496L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(130);
				match(LPAREN);
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 9069964560384L) != 0)) {
					{
					setState(131);
					explist();
					}
				}

				setState(134);
				match(RPAREN);
				}
			}

			setState(137);
			mixedlist();
			setState(138);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdlistContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() { return getTokens(Qasm2Parser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(Qasm2Parser.Identifier, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(Qasm2Parser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(Qasm2Parser.COMMA, i);
		}
		public IdlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idlist; }
	}

	public final IdlistContext idlist() throws RecognitionException {
		IdlistContext _localctx = new IdlistContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_idlist);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(Identifier);
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(141);
				match(COMMA);
				setState(142);
				match(Identifier);
				}
				}
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MixedlistContext extends ParserRuleContext {
		public List<ArgumentContext> argument() {
			return getRuleContexts(ArgumentContext.class);
		}
		public ArgumentContext argument(int i) {
			return getRuleContext(ArgumentContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(Qasm2Parser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(Qasm2Parser.COMMA, i);
		}
		public MixedlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mixedlist; }
	}

	public final MixedlistContext mixedlist() throws RecognitionException {
		MixedlistContext _localctx = new MixedlistContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_mixedlist);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			argument();
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(149);
				match(COMMA);
				setState(150);
				argument();
				}
				}
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArgumentContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(Qasm2Parser.Identifier, 0); }
		public DesignatorContext designator() {
			return getRuleContext(DesignatorContext.class,0);
		}
		public ArgumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argument; }
	}

	public final ArgumentContext argument() throws RecognitionException {
		ArgumentContext _localctx = new ArgumentContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_argument);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			match(Identifier);
			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRACKET) {
				{
				setState(157);
				designator();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DesignatorContext extends ParserRuleContext {
		public TerminalNode LBRACKET() { return getToken(Qasm2Parser.LBRACKET, 0); }
		public TerminalNode Integer() { return getToken(Qasm2Parser.Integer, 0); }
		public TerminalNode RBRACKET() { return getToken(Qasm2Parser.RBRACKET, 0); }
		public DesignatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_designator; }
	}

	public final DesignatorContext designator() throws RecognitionException {
		DesignatorContext _localctx = new DesignatorContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_designator);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(LBRACKET);
			setState(161);
			match(Integer);
			setState(162);
			match(RBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExplistContext extends ParserRuleContext {
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(Qasm2Parser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(Qasm2Parser.COMMA, i);
		}
		public ExplistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_explist; }
	}
